--- a/index.html
+++ b/index.html
@@ -4,13 +4,73 @@
   <meta charset="UTF-8">
   <title>HTML Sample</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
-  <div class="header">Header領域</div>
-  <div class="main">
-    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":true,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":true,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":true,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":true,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"EUR/USD","period":"5","offerSide":"BID","timezone":0,"live":true,"allowPan":true,"width":"200","height":"275","adv":"popup"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+  <div class="flex">
+    <div>
+
+    <!- USD/JPY-->
+      <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"USD/JPY","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+
+    </div>
+    <!- AUD/JPY-->
+    <div>
+    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"AUD/JPY","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+    </div>
+
+    <div>
+          <!- AUD/USD-->
+
+    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"AUD/USD","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+    </div>
+
   </div>
+
+
+  <div class="flex">
+    <div>
+
+    <!- EUR/JPY-->
+      <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"EUR/JPY","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+
+    </div>
+    <div>
+    <!- EUR/AUD-->
+    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"EUR/AUD","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+    </div>
+
+    <div>
+    <!- EUR/USD-->
+    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"GBP/JPY","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+    </div>
+
+  </div>
+
+
+    <div class="flex">
+    <!- GBP/JPY-->
+    <div>
+
+      <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"GBP/JPY","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+
+    </div>
+    <!-GBP/AUD -->
+    <div>
+    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"GBP/AUD","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+    </div>
+
+
+    <!- GBPUSD-->
+    <div>
+    <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"GBP/USD","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+    </div>
+
+  </div>
+
+
+    <!- EUR/GBP-->
+      <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"EUR/GBP","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"400","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
+
 
 </body>
 </html>
