--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class='navi-period'>
   <a href="index.html">1D</a>|
   <a href="index_1h.html">1H</a>
+  <a href="index_5m.html">5M</a>
 |
   <a href="https://jp.tradingview.com/markets/currencies/indices-all/">指数</a>
     </div>
