--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
     <!- EUR/GBP-->
       <script type="text/javascript">DukascopyApplet = {"type":"chart","params":{"showUI":true,"showTabs":true,"showParameterToolbar":true,"showOfferSide":true,"allowInstrumentChange":false,"allowPeriodChange":true,"allowOfferSideChange":true,"showAdditionalToolbar":true,"showExportImportWorkspace":true,"allowSocialSharing":true,"showUndoRedoButtons":false,"showDetachButton":false,"presentationType":"candle","axisX":true,"axisY":true,"legend":true,"timeline":false,"showDateSeparators":true,"showZoom":true,"showScrollButtons":true,"showAutoShiftButton":true,"crosshair":false,"borders":false,"freeMode":false,"theme":"Pastelle","uiColor":"#000","availableInstruments":"l:","instrument":"EUR/GBP","period":"16","offerSide":"BID","timezone":1,"live":true,"allowPan":true,"indicators":"sDYLRCxB3BzaEA2ggBkBFxU4psAdSACWENmkccQIOoAMoBlAAIO8Mknt2Vx0Jrim6gIShICKJFaZAQRHUCLQbGQBCwJAJRYvopTTqgigG8fIdvS4269hDgGydjM8a5Ri1ytDv-56fF2YDewpOQA4jOQttKxQ7JxCFV2ABA..","width":"400","height":"300","adv":"popup","lang":"jp"}};</script><script type="text/javascript" src="https://freeserv-static.dukascopy.com/2.0/core.js"></script>
 
+      <br />
+
+
+      <!-- OANDA Widget BEGIN -->
+<div data-currency-power-balance></div>
+<script src="https://widget.oanda.jp/currency-power-balance.js" async></script>
+<!-- OANDA Widget END -->
 
 </body>
 </html>
